--- a/template.qmd
+++ b/template.qmd
@@ -2,13 +2,17 @@
 title: Untitled
 format:
   MedEdTemplate-html: default
-author: hendrik.friederichs
+author: Hendrik Friederichs
 date: last-modified
 ---
 
-## Introduction
+# Abstract 
 
-*TODO* Create an example file that demonstrates the formatting and features of your format.
+## Background
+
+# Background
+
+
 
 ## More Information
 
